// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddedToBagActions native component AddedToBagActions native component renders correctly 1`] = `
<Fragment>
  <Styled(View)>
    <AnimatedComponent
      style={
        Object {
          "height": 68,
        }
      }
    >
      <Styled(View)>
        <Styled(TouchableOpacity)
          onPress={[Function]}
        >
          <Styled(View)>
            <Styled(View)>
              <Styled(Text)>
                test (10)
              </Styled(Text)>
              <Styled(Text)>
                undefined: $0.00
              </Styled(Text)>
            </Styled(View)>
          </Styled(View)>
        </Styled(TouchableOpacity)>
        <Styled(TouchableOpacity)
          onPress={[Function]}
        >
          <Styled(View) />
        </Styled(TouchableOpacity)>
      </Styled(View)>
    </AnimatedComponent>
    <Styled(ScrollViewMock)
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollEndDrag={[Function]}
      viewHeight="65%"
    >
      <Styled(View)>
        <Connect(ProductTileWrapperContainer)
          bagLabels={
            Object {
              "bagHeading": "test",
              "checkout": "",
              "savedLaterButton": "savedLaterButton",
              "tagLine": "tagline",
              "viewBag": "",
            }
          }
        />
      </Styled(View)>
      <Connect(QuickViewModalContainer)
        fromBagPage={true}
      />
    </Styled(ScrollViewMock)>
  </Styled(View)>
  <Styled(View)>
    <Connect(AddedToBagContainer)
      hideHeader={[Function]}
      isNoNEmptyBag={false}
      labels={
        Object {
          "bagHeading": "test",
          "checkout": "",
          "savedLaterButton": "savedLaterButton",
          "tagLine": "tagline",
          "viewBag": "",
        }
      }
      navigation={[MockFunction]}
    />
  </Styled(View)>
</Fragment>
`;

exports[`AddedToBagActions native component AddedToBagActions native component renders correctly with SFL section 1`] = `
<Fragment>
  <Styled(View)>
    <AnimatedComponent
      style={
        Object {
          "height": 68,
        }
      }
    >
      <Styled(View)>
        <Styled(TouchableOpacity)
          onPress={[Function]}
        >
          <Styled(View)>
            <Styled(View)>
              <Styled(Text)>
                test (0)
              </Styled(Text)>
              <Styled(Text) />
            </Styled(View)>
          </Styled(View)>
        </Styled(TouchableOpacity)>
        <Styled(TouchableOpacity)
          onPress={[Function]}
        >
          <Styled(View) />
        </Styled(TouchableOpacity)>
      </Styled(View)>
    </AnimatedComponent>
    <Styled(ScrollViewMock)
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollEndDrag={[Function]}
      viewHeight="65%"
    >
      <Styled(View)>
        <Connect(ProductTileWrapperContainer)
          bagLabels={
            Object {
              "bagHeading": "test",
              "checkout": "",
              "savedLaterButton": "savedLaterButton",
              "tagLine": "tagline",
              "viewBag": "",
            }
          }
          isBagPageSflSection={true}
          sflItems={Object {}}
        />
      </Styled(View)>
      <Connect(QuickViewModalContainer)
        fromBagPage={true}
      />
    </Styled(ScrollViewMock)>
  </Styled(View)>
</Fragment>
`;

exports[`AddedToBagActions native component AddedToBagActions native component renders correctly with active BAG section 1`] = `<View />`;

exports[`AddedToBagActions native component AddedToBagActions native component renders correctly with active SFL section 1`] = `
<Fragment>
  <Styled(View)>
    <AnimatedComponent
      style={
        Object {
          "height": 68,
        }
      }
    >
      <Styled(View)>
        <Styled(TouchableOpacity)
          onPress={[Function]}
        >
          <Styled(View)>
            <Styled(View)>
              <Styled(Text)>
                test (0)
              </Styled(Text)>
              <Styled(Text) />
            </Styled(View)>
          </Styled(View)>
        </Styled(TouchableOpacity)>
        <Styled(TouchableOpacity)
          onPress={[Function]}
        >
          <Styled(View) />
        </Styled(TouchableOpacity)>
      </Styled(View)>
    </AnimatedComponent>
    <Styled(ScrollViewMock)
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollEndDrag={[Function]}
      viewHeight="60%"
    >
      <Styled(View)>
        <Connect(ProductTileWrapperContainer)
          bagLabels={
            Object {
              "bagHeading": "test",
              "checkout": "",
              "savedLaterButton": "savedLaterButton",
              "tagLine": "tagline",
              "viewBag": "",
            }
          }
          isBagPageSflSection={true}
          sflItems={Object {}}
        />
      </Styled(View)>
      <Connect(QuickViewModalContainer)
        fromBagPage={true}
      />
    </Styled(ScrollViewMock)>
  </Styled(View)>
</Fragment>
`;

exports[`AddedToBagActions native component AddedToBagActions native component renders correctly with bag section 1`] = `
<Fragment>
  <Styled(View)>
    <AnimatedComponent
      style={
        Object {
          "height": 68,
        }
      }
    >
      <Styled(View)>
        <Styled(TouchableOpacity)
          onPress={[Function]}
        >
          <Styled(View)>
            <Styled(View)>
              <Styled(Text)>
                test (0)
              </Styled(Text)>
              <Styled(Text) />
            </Styled(View)>
          </Styled(View)>
        </Styled(TouchableOpacity)>
        <Styled(TouchableOpacity)
          onPress={[Function]}
        >
          <Styled(View) />
        </Styled(TouchableOpacity)>
      </Styled(View)>
    </AnimatedComponent>
    <Styled(ScrollViewMock)
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollEndDrag={[Function]}
      viewHeight="60%"
    >
      <Styled(View)>
        <Connect(ProductTileWrapperContainer)
          bagLabels={
            Object {
              "bagHeading": "test",
              "checkout": "",
              "savedLaterButton": "savedLaterButton",
              "tagLine": "tagline",
              "viewBag": "",
            }
          }
        />
        <Styled(View)>
          <Connect(OrderLedgerContainer)
            pageCategory="bagPage"
          />
        </Styled(View)>
        <Styled(View)>
          <Styled(View)>
            <Connect(BonusPointsDays)
              isBagPage={true}
              showAccordian={false}
            />
          </Styled(View)>
        </Styled(View)>
        <Styled(View)>
          <Connect(CouponContainer)
            showAccordian={false}
          />
        </Styled(View)>
      </Styled(View)>
      <Connect(QuickViewModalContainer)
        fromBagPage={true}
      />
    </Styled(ScrollViewMock)>
  </Styled(View)>
  <Styled(View)>
    <Connect(AddedToBagContainer)
      hideHeader={[Function]}
      isNoNEmptyBag={true}
      labels={
        Object {
          "bagHeading": "test",
          "checkout": "",
          "savedLaterButton": "savedLaterButton",
          "tagLine": "tagline",
          "viewBag": "",
        }
      }
      navigation={[MockFunction]}
      showAddTobag={true}
    />
  </Styled(View)>
</Fragment>
`;
